traq-dev-test/widget/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traq-widget
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: c1-203.tokyotech.org
