traq-dev-test/widget/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traqs-widget

spec:
  routes:
    - kind: Rule
      match: Host(`q-dev.trapti.tech`) && PathPrefix(`/widget`)
      middlewares:
        - name: auth-trapti-tech-soft
          namespace: auth
        - name: strip-widget-prefix
          namespace: traq-dev
      services:
        - namespace: traq-dev
          kind: Service
          name: traq-widget
          port: 8003
          scheme: http
          weight: 1
